[package]
name = "contest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = "0.3.6"

[[bin]]
name = "abc279a"
path = "src/abc/279/a.rs"

[[bin]]
name = "abc280a"
path = "src/abc/280/a.rs"

[[bin]]
name = "abc281a"
path = "src/abc/281/a.rs"

[[bin]]
name = "abc282a"
path = "src/abc/282/a.rs"

[[bin]]
name = "abc283a"
path = "src/abc/283/a.rs"